Add domin in base.html fetch

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
             /* wrapper.innerHTML = '' */
             // ou utiliser la fonction remove avec la commande try à l'intérieur de la boucle for
             
-            const url = 'http://127.0.0.1:8000/api/task-list/'
+            const url = 'https://nafi-drfajax.herokuapp.com/api/task-list/'
             
             // recuperer la liste des donnees depuis l'api de l'app
             fetch(url)
