--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'bootstrap4/bootstrap.min.css' %}">
 </head>
@@ -13,7 +13,7 @@
 <body>
     <!-- Navbar brand -->
     <nav class="navbar navbar-expand-lg  navbar-dark " >
-        <a href="{% url 'frontend:list' %}" class="navbar-brand"><img src='{% static "images/kmyprod-dark.svg" %}' style="height: 80px; width: 80px;"></a>
+        <a href="{% url 'frontend:list' %}" class="navbar-brand"><img src='{% static "images/kmyprod-dark.svg" %}'></a>
         
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
